# WasmForge-A-Deterministic-WebAssembly-Powered-Professional-Editor

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LAUNCH_POSTS.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml
apps/backend/: package.json
apps/frontend/: package.json  tsc-output.txt
apps/frontend/src/: App.tsx  index.css
apps/frontend/src/bridge/: KineticInputManager.ts  KineticRenderLoop.ts  KineticStorageManager.ts  KineticSyncManager.ts  KineticTypes.ts  MockKineticEngine.ts  WasmLoader.ts
apps/frontend/src/components/: AnimationTimeline.tsx  CommandPalette.tsx  CustomCursor.tsx  EnginePreferences.tsx  KeyboardShortcuts.tsx  PropertyInspector.tsx  ThemeCustomizer.tsx
apps/frontend/src/store/: ActionStore.ts
apps/frontend/src/utils/: HotkeyManager.ts  LayoutManager.ts  SnapUtils.ts  ToolRegistry.ts
engine/: Cargo.toml
engine/src/: lib.rs
engine/src/core/: geometry.rs  interpolation.rs  mod.rs  path.rs  physics.rs  spatial.rs  state.rs
